oci/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-service
# spec:
#   selector:
#     app: nginx-app
#   type: NodePort
#   ports:
#   - name: http
#     port: 80
#     targetPort: 80
#     nodePort: 30036
#     protocol: TCP


apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx-app


# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-service2
# spec:
#   type: ClusterIP
#   ports:
#     - port: 80
#       targetPort: 80
#       protocol: TCP
#   selector:
#     app: nginx-app
