oci/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-ingress
#   # annotations:
#   #   kubernetes.io/ingress.class: nginx
#   #   nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#     # - host: hello-world.info
#     - ingressClassName: nginx
#     http:
#         paths:
#           - backend:
#               service:
#                 name: nginx-service
#                 port:
#                   number: 80
#             path: /teste
#             pathType: Prefix



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
